# bench-loop

./: .gitignore  AUDIT-2026-04-24.md  AUDIT-2026-05-12.md  AUDIT-FIX-PLAN-2026-05-11.md  LICENSE  README.md  RELEASE.md  SPEC.md  pyproject.toml
bench_loop/: __init__.py  __main__.py  cli.py  config.py  hardware.py  harness.py  models.py
bench_loop/dashboard/api/routes/: benchmark.py
bench_loop/providers/: __init__.py  ollama.py  openai_compat.py
bench_loop/report/: console.py
bench_loop/runner/: orchestrator.py  result_writer.py
bench_loop/sandbox/: __init__.py
bench_loop/suites/: __init__.py  agent.py  base.py  coding.py  dataextract.py  instructfollow.py  reasonmath.py  speed.py  tool_use.py  toolcall.py
bench_loop/tasks/agent/: tasks.yaml
bench_loop/tasks/coding/: tasks.yaml
bench_loop/tasks/dataextract/: tasks.yaml
bench_loop/tasks/instructfollow/: tasks.yaml
bench_loop/tasks/reasonmath/: tasks.yaml
bench_loop/tasks/speed/: tasks.yaml
bench_loop/tasks/tool_use/: tasks.yaml
bench_loop/tasks/toolcall/: tasks.yaml
operators/pc1-4090-dflash-qwen35/: README.md  benchloop-record-template.json  launch_baseline_8084.sh  prompts.json  recipe.json  run.sh  run_operator.py
operators/pc1-4090-qwen36-27b-dflash-buun/: README.md  RUNBOOK.md  compare_lane_results.py  launch_baseline_8084.sh  launch_candidate_8083.sh  recipe.json  run_baseline_suite.sh  run_candidate_suite.sh  run_endpoint_suite.py
operators/pc1-4090-qwen36-dflash-buun/: HANDOFF-PC1.md  README.md  launch_qwen36_baseline_8084.sh  launch_qwen36_buun_8083.sh  pc1_preflight.sh  prompts.json  recipe.json  run_forever.sh  run_once.sh  run_operator.py
scripts/: bench_speed.py  ingest_operator_result.py  restart_server.sh
tasks/loop_code_fix/fixtures/lcf05_type_coercion/: test_src.py
tasks/loop_code_fix/fixtures/lcf11_async_cleanup/: test_src.py
tasks/loop_schema/: tasks.yaml
tasks/reasonmath/: tasks.yaml
