[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchloop"
version = "0.1.0"
description = "Local-first CLI + web app for benchmarking LLMs across quality, speed, reliability, and agent tool use."
readme = "README.md"
license = "MIT"
authors = [{ name = "BenchLoop contributors" }]
requires-python = ">=3.10"
keywords = ["llm", "benchmark", "ollama", "mlx", "vllm", "agent", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
benchloop = "bench_loop.cli:main"
bench-loop = "bench_loop.cli:main"

[project.urls]
Homepage = "https://benchloop.com"
Documentation = "https://benchloop.com/docs"
Repository = "https://github.com/ocplatform/bench-loop"
Issues = "https://github.com/ocplatform/bench-loop/issues"

[tool.hatch.build.targets.wheel]
packages = ["bench_loop"]

[tool.hatch.build.targets.wheel.shared-data]
"bench_loop/tasks" = "bench_loop/tasks"
