[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchloop-cli"
version = "0.2.3"
description = "Local-first CLI + web dashboard for benchmarking LLMs across quality, speed, reliability, and a real multi-turn agent loop. Hardware-aware, deterministic, reproducible."
# Note: the PyPI name `benchloop` was already taken by an unrelated dataset
# library, so the published distribution is `benchloop-cli`. The installed
# console scripts remain `benchloop` and `bench-loop`.
readme = "README.md"
license = "MIT"
authors = [{ name = "BenchLoop contributors" }]
requires-python = ">=3.10"
keywords = ["llm", "benchmark", "ollama", "mlx", "vllm", "agent", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
benchloop = "bench_loop.cli:main"
bench-loop = "bench_loop.cli:main"

[project.urls]
Homepage = "https://bench-loop.com"
Documentation = "https://bench-loop.com/docs"
Repository = "https://github.com/outsourc-e/bench-loop"
Issues = "https://github.com/outsourc-e/bench-loop/issues"

[tool.hatch.build.targets.wheel]
packages = ["bench_loop"]
artifacts = [
    "bench_loop/dashboard/ui/**",
    "bench_loop/dashboard/api/**",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "bench_loop/dashboard/ui/**",
    "bench_loop/dashboard/api/**",
]

[tool.hatch.build.targets.wheel.shared-data]
"bench_loop/tasks" = "bench_loop/tasks"

[tool.pytest.ini_options]
testpaths = ["tests"]
